--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,10 @@ jobs:
           node-version: ${{ inputs.node-version }}
       - name: Install dependencies
         run: npm install
+      - name: Build
+        run: npm run build
+      - name: Upload Artifact  
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
