Parametrización pipeline de build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Install Dependencies
+name: DevOps Github Actions
 
 on:
   workflow_call:
@@ -21,8 +21,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Upload Artifact  
-        uses: actions/upload-artifact@v2
+      - name: Upload artifact to enable deployment
+        uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: dist
+          path: ./dist
