--- a/.github/workflows/build-react.yml
+++ b/.github/workflows/build-react.yml
@@ -41,6 +41,6 @@ jobs:
           path: ./dist
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        with:
+        env:
           github_token: ${{ secrets.CI_CD_TOKEN }}
           publish_dir: ./dist       
