--- a/.github/workflows/build-react.yml
+++ b/.github/workflows/build-react.yml
@@ -40,7 +40,7 @@ jobs:
           name: dist
           path: ./dist
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        env:
+        uses: peaceiris/actions-gh-pages@v4
+        with:
           github_token: ${{ secrets.CI_CD_TOKEN }}
           publish_dir: ./dist       
