--- a/.github/workflows/build-react.yml
+++ b/.github/workflows/build-react.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
     secrets:
-      github_token:
+      conexion_token:
         required: true
 jobs:
   # Build Job
@@ -41,11 +41,11 @@ jobs:
         with:
           name: dist
           path: ./dist
-      - run: echo " valor" ${{ secrets.github_token }}
+      - run: echo " valor" ${{ secrets.conexion_token }}
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4 
         with:
-          github_token: ${{ secrets.github_token }}
+          github_token: ${{ secrets.conexion_token }}
           publish_dir: ./dist
           
     
