Actualizacion de templates

--- a/.github/workflows/build-deploy-s3.yml
+++ b/.github/workflows/build-deploy-s3.yml
@@ -6,9 +6,9 @@ on:
       node-version:
         required: true
         type: string
-    secrets:
-      conexion_token:
-        required: true
+    #secrets:
+    #  conexion_token:
+    #    required: true
 jobs:
   # Build Job
   build:
