--- a/.github/workflows/build-deploy-s3.yml
+++ b/.github/workflows/build-deploy-s3.yml
@@ -6,9 +6,11 @@ on:
       node-version:
         required: true
         type: string
-    #secrets:
-    #  conexion_token:
-    #    required: true
+    secrets:
+      access_key:
+        required: true
+      secret_key:
+        required: true
 jobs:
   # Build Job
   build:
@@ -45,9 +47,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: us-east-2
+            aws-access-key-id: ${{ secrets.access_key }}
+            aws-secret-access-key: ${{ secrets.secret_key }}
+            aws-region: us-east-1
 
       - name: Deploy to S3
         run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET }} --delete
