--- a/.github/workflows/build-deploy-s3.yml
+++ b/.github/workflows/build-deploy-s3.yml
@@ -11,6 +11,8 @@ on:
         required: true
       secret_key:
         required: true
+      bucket_react:
+        required: true
 jobs:
   # Build Job
   build:
@@ -52,4 +54,4 @@ jobs:
             aws-region: us-east-1
 
       - name: Deploy to S3
-        run: aws s3 cp ./dist s3://${{ secrets.S3_BUCKET }} --recursive
+        run: aws s3 cp ./dist s3://${{ secrets.bucket_react }} --recursive
