--- a/.github/workflows/build-deploy-s3.yml
+++ b/.github/workflows/build-deploy-s3.yml
@@ -18,23 +18,23 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ inputs.node-version }}
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Upload artifact to enable deployment
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: ./dist
-  build-script:         
-      uses: ./.github/actions/build
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ inputs.node-version }}
+    - name: Install dependencies
+      run: npm install
+    - name: Build
+      run: npm run build
+    - name: Upload artifact to enable deployment
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist
+        path: ./dist
+    - name: Run composite action
+      uses: estefa-932014/devops-templates/.github/actions/build/action@main      
    # Deploy Job
   deploy:
     # Add a dependency to the build job
