Actualización de action compuesta

--- a/.github/workflows/build-deploy-s3.yml
+++ b/.github/workflows/build-deploy-s3.yml
@@ -34,7 +34,7 @@ jobs:
         name: dist
         path: ./dist
   build-script:
-    uses: estefa-932014/devops-templates/.github/build/react.yml@main
+    uses: estefa-932014/devops-templates/.github/workflows/build/react.yml@main
    # Deploy Job
   deploy:
     # Add a dependency to the build job
