--- a/.github/workflows/build-s3-react.yml
+++ b/.github/workflows/build-s3-react.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        Default:${{ github.repository }}
     - run: ${{ github.repository }}
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -27,3 +29,6 @@ jobs:
       with:
         name: dist
         path: ./dist
+    - name: Build
+      id: build
+      uses: ./.github/actions/build
