--- a/.github/workflows/build-s3-react.yml
+++ b/.github/workflows/build-s3-react.yml
@@ -27,6 +27,6 @@ jobs:
       with:
         name: dist
         path: ./dist
-#    - name: Build
-#      id: build
-#      uses: ./.github/actions/build
+    - name: Build
+      id: build
+      uses: ./.github/actions/build
