Actualización de templates

--- a/.github/workflows/build-s3-react.yml
+++ b/.github/workflows/build-s3-react.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Checkout tools repo
+      uses: actions/checkout@v4
+      with:
+        repository: estefa-932014/devops-templates
+        path: ./devops-templates  
     - run: echo ${{ github.repository }}
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -27,13 +32,7 @@ jobs:
       with:
         name: dist
         path: ./dist
-    
-    - name: Checkout tools repo
-      uses: actions/checkout@v4
-      with:
-        repository: estefa-932014/devops-templates
-        path: devops-templates
-    - run: ls /home/runner/work   
-  #  - name: Build
-  #    id: build
-  #    uses: ./.github/actions/build
+ 
+    - name: Build
+      id: build
+      uses: ./devops-templates/.github/actions/build
