--- a/.github/workflows/deploy-s3-react.yml
+++ b/.github/workflows/deploy-s3-react.yml
@@ -28,4 +28,5 @@ jobs:
             aws-region: us-east-1
 
       - name: Deploy to S3
-        run: aws s3 cp ./dist s3://${{ secrets.bucket_react }} --recursive
+        #run: aws s3 cp ./dist s3://${{ secrets.bucket_react }} --recursive
+        run: aws s3 sync ./dist s3://${{ secrets.bucket_react}} --delete
