--- a/.github/workflows/deploy-s3-react.yml
+++ b/.github/workflows/deploy-s3-react.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   deploy:
     # Specify runner + deployment step
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
