--- a/.github/workflows/deploy-dockerhub.yml
+++ b/.github/workflows/deploy-dockerhub.yml
@@ -17,6 +17,12 @@ jobs:
       with:
         username: ${{ secrets.user_dockerhub }}
         password: ${{ secrets.token_dockerhub }}
+       # Add support for more platforms with QEMU (optional)
+      # https://github.com/docker/setup-qemu-action
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3    
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
