--- a/.github/workflows/deploy-dockerhub.yml
+++ b/.github/workflows/deploy-dockerhub.yml
@@ -9,7 +9,8 @@ on:
         required: true
 jobs:
   docker-build:
-    runs-on: self-hosted
+    runs-on:
+      labels: [ self-hosted, ec2-1 ]
     steps:
     - uses: actions/checkout@v4
     - name: Login to Docker Hub
